Fix "jump" when edit a field on mina uppgifte

--- a/src/resources/sass/components/_profile.scss
+++ b/src/resources/sass/components/_profile.scss
@@ -52,9 +52,12 @@
 
 .profile__input {
 	display: inline-block;
-	margin: -10px 0;
 	color: #546785;
 	font-weight: 600;
+
+	@include min-screen($screen-sm-min) {
+		margin: -10px 0;
+	}
 
 	.help-block {
 		margin: 0;
@@ -82,13 +85,21 @@
 			background: transparent;
 			border: none;
 			margin: 0;
-			padding: 9px 0;
+			padding: 0;
+			@include min-screen($screen-sm-min) {
+				padding: 9px 0;
+			}
+
 		}
 	}
 
 	.checkbox {
-		display: inline-block;
 		margin: 0 15px 0 0;
+		display: block;
+
+		@include min-screen($screen-sm-min) {
+			display: inline-block;
+		}
 
 		input {
 			display: none;
@@ -173,11 +184,9 @@
 
 	.profile__submit { display: inline-block; }
 
-	.profile__input {
-		margin: 0;
-	}
-
 	.profile__input .checkbox {
+		padding: 10px 0;
+
 		label {
 			display: inline-block;
 		}
@@ -195,8 +204,10 @@
 	.profile__multiple-input {
 		display: inline-block;
 		margin-bottom: 10px;
+
 		@include min-screen($screen-sm-min) {
 			margin-bottom: 0;
+			padding: 10px 0;
 		}
 
 		&:last-of-type {
